<resources>
    <string name="app_name">pocket investor</string>
    <string name="form_name">Name</string>
    <string name="form_username">username</string>
    <string name="form_firstname">firstname</string>
    <string name="lastname">lastname</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="confirm_password">confirm password</string>
    <string name="sign_up">sign up</string>
    <string name="pocket_investor">Pocket Investor</string>
    <string name="log_in">log in</string>
    <string name="back">back</string>
    <string name="go_to_portfolio">go to portfolio</string>
    <string name="go_to_stocks">go to stocks</string>
    <string name="sell">sell</string>
    <string name="replenish_balance">replenish balance</string>
    <string name="buy">buy</string>
    <string name="profile">profile</string>
    <string name="count">count</string>
    <string name="amount_of_money">amount of money</string>
</resources>