<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="50dp"
    tools:context=".activities.MainActivity">

    <LinearLayout
        android:layout_width="332dp"
        android:layout_height="600dp"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/turquoise"
            android:hint="@string/form_username"
            android:padding="15dp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/firstname_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/purple"
            android:hint="@string/form_firstname"
            android:padding="15dp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/lastname_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/violet"
            android:hint="@string/lastname"
            android:padding="15dp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/red"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="15dp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/gold"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="15dp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/confirm_password_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/gold"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:padding="15dp" />

        <pl.droidsonroids.gif.GifImageView
            android:layout_width="match_parent"
            android:layout_height="89dp"
            android:background="#fff"
            android:minHeight="1000dp"
            android:src="@drawable/monet" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/sign_up_button"
            android:layout_width="match_parent"
            android:layout_height="84dp"
            android:minHeight="100dp"
            android:text="@string/sign_up"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/back_button"
            android:minHeight="100dp"
            android:text="@string/back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            />

    </LinearLayout>


</RelativeLayout>