<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="50dp"
    android:background="#067699">

  <LinearLayout
      android:layout_width="332dp"
      android:layout_height="579dp"
      android:orientation="vertical"
      tools:ignore="MissingConstraints">
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:gravity="top"
        android:textSize="15sp"
        android:textColor="@color/white"
        android:text="@string/app_name" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/username_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/rectangle"
        android:hint="@string/form_username"
        android:padding="15dp" />
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/password_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle"
        android:layout_marginTop="20dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="15dp" />
    <pl.droidsonroids.gif.GifImageView
        android:layout_width="match_parent"
        android:layout_height="89dp"
        android:background="#067699"
        android:minHeight="1000dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/authgif" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/auth_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="100dp"
        android:layout_marginTop="50dp"
        android:text="@string/log_in"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/back_button"
        android:minHeight="100dp"
        android:text="@string/back"
        android:layout_width="match_parent"
        android:layout_marginTop="50dp"
        android:layout_height="wrap_content" />
  </LinearLayout>


</RelativeLayout>