<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="50dp"
    android:background="#067699"
    tools:context=".activities.MainActivity">

    <LinearLayout
        android:layout_width="332dp"
        android:layout_height="600dp"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:minHeight="200dp"
            android:textSize="30sp"
            android:textColor="@color/white"
            android:gravity="center"
            />
        <pl.droidsonroids.gif.GifImageView
            android:layout_width="match_parent"
            android:layout_height="89dp"
            android:background="#067699"
            android:minHeight="1000dp"
            android:src="@drawable/drop_monet" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/log_in_button_for_start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:minHeight="100dp"

            android:text="@string/log_in" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/sign_up_button_for_start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:minHeight="100dp"
            android:text="@string/sign_up" />
    </LinearLayout>


</RelativeLayout>