<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="50dp"
    android:orientation="vertical"
    android:background="#067699">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        tools:ignore="MissingConstraints">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:gravity="top"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:text="@string/app_name" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="120dp"
            android:src="@drawable/ic_launcher_foreground" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/username"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:gravity="center"
            android:text=""
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/balance"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:gravity="center"
            android:text=""
            android:textColor="@color/white"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/zaxhar"
            android:layout_width="310dp"
            android:layout_height="100dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/zachar" />
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/replenish_balance_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/rectangle"
            android:hint="@string/amount_of_money"
            android:gravity="center"
            android:padding="15dp"
            android:shadowRadius="30"
            android:shape="rectangle" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/replenishBalance"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_marginTop="25dp"
            android:minHeight="100dp"
            android:text="@string/replenish_balance"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/go_to_profile"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_marginTop="25dp"
            android:minHeight="100dp"
            android:text="@string/profile" />


    </LinearLayout>
</LinearLayout>