<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="50dp"
    android:orientation="vertical"
    android:background="#067699">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        tools:ignore="MissingConstraints">
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:gravity="top"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:text="@string/app_name" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="120dp"
            android:src="@drawable/ic_launcher_foreground" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/username"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:gravity="center"
            android:text=""
            android:textColor="@color/white"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:gravity="center"
            android:text=""
            android:textColor="@color/white"
            android:textSize="40sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/go_to_portfolio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:minHeight="100dp"
            android:text="@string/go_to_portfolio" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/go_to_stocks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:minHeight="100dp"
            android:text="@string/go_to_stocks" />

    </LinearLayout>
</LinearLayout>